# suspension-explorer-core

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  justfile  pyproject.toml  visualize_camber_shim.py
.github/workflows/: ci.yml
scripts/: bump_sweep.yaml  plot_bump_sweep.py
src/kinematics/: __init__.py  analysis.py  cli.py  constraints.py  diagnostics.py  main.py  sensitivity.py  solver.py  state.py  targets.py
src/kinematics/cli/: __init__.py  app.py  bootstrap.py
src/kinematics/cli/commands/: __init__.py  sweep.py
src/kinematics/cli/io/: __init__.py  loaders.py  results_writer.py  schema_parser.py  sweep_loader.py  yaml.py
src/kinematics/cli/visualization/: animation.py  api.py  main.py  plots.py  vector_utils.py
src/kinematics/components/: upright.py
src/kinematics/core/: __init__.py  analysis.py  assembly.py  constants.py  constraints.py  diagnostics.py  display.py  dual.py  elements.py  enums.py  export.py  geometry.py  input.py  jacobians.py  point_ref.py  presentation.py  rigid_body.py  sensitivity.py  solver.py  state.py  sweep.py  targeting.py  targets.py  topology.py  types.py
src/kinematics/core/components/: __init__.py  upright.py
src/kinematics/core/metrics/: __init__.py  angles.py  anti_geometry.py  axle_metrics.py  (+11 more)
src/kinematics/io/: __init__.py  geometry_loader.py  loaders.py  results_writer.py  sweep_loader.py  validation.py
src/kinematics/metrics/: __init__.py  angles.py  anti_geometry.py  axle_metrics.py  catalog.py  context.py  derivatives.py  kernels.py  main.py  metadata.py  rates.py  registry.py  steering_geometry.py  travel.py  units.py
src/kinematics/schema/: __init__.py  coercion.py  config.py  geometry.py  sweep.py
src/kinematics/suspensions/: axle.py  base.py  build.py  double_wishbone.py  registry.py
src/kinematics/visualization/: animation.py  api.py  display.py  main.py  plots.py
tests/: test_absolute_mode.py  test_analysis.py  test_axle.py  test_axle_composition.py  test_axle_rocker.py  test_axle_schema.py  test_camber_shims.py  test_chirality.py  test_constraints.py  test_core_input.py  test_derivative_metrics.py  test_diagnostics.py  test_dual.py  test_jacobians.py  test_loader.py  test_macpherson.py  test_metric_export_metadata.py  test_metric_labels.py  test_metric_metadata.py  test_metrics.py  test_mount_body.py  test_point_ref.py  test_presentation.py  test_public_api.py  test_rate_declarations.py  test_rocker_arb.py  test_scripts_smoke.py  test_sensitivity.py  test_solver.py  test_state.py  test_state_metrics.py  test_steering.py  test_strut.py  test_suspensions.py  test_sweep_loader.py  test_t_bar_arb.py  test_targets.py  test_upright_rigid_body.py  test_visualization_display.py
tests/benchmarks/: test_bench_sweep.py
tests/core/: test_absolute_mode.py  test_assembly.py  test_chirality.py  test_constraints.py  test_derivative_metrics.py  test_derived_points.py  test_diagnostics.py  test_dual.py  test_geometry.py  test_jacobians.py  test_metric_metadata.py  test_point_ref.py  test_soft_math.py  test_solver.py  test_state.py  test_targets.py  test_upright_rigid_body.py  test_vector_utils_generic.py
tests/data/: axle_geometry.yaml  axle_geometry_explicit.yaml  axle_geometry_rocker.yaml  axle_geometry_t_bar.yaml  axle_rocker_sweep.yaml  axle_sweep.yaml  axle_t_bar_bump_sweep.yaml  axle_t_bar_roll_sweep.yaml  corner_rocker_geometry.yaml  corner_strut_geometry.yaml  corner_strut_rocker_geometry.yaml  geometry.yaml  geometry_template.yaml  macpherson_axle_geometry.yaml  macpherson_geometry.yaml  sweep.yaml
tests/data/e2e/: output.csv  output.parquet
tests/e2e/: test_cli_entrypoint.py  test_e2e.py
tests/manual/: test_run_with_viz.py
tests/points/: test_derived.py
tests/vector_utils/: test_generic.py  test_geometric.py
tools/: generate_jacobians.py  plot_residuals.py  profile_sweep.py
(+55 files in other folders)
